--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react": "^17.0.2",
     "react-beautiful-dnd": "^13.1.0",
     "react-dom": "^17.0.2",
+    "react-loader-spinner": "^6.1.6",
     "react-router-dom": "^6.14.1",
     "react-scripts": "^5.0.1",
     "react-tag-input": "^6.8.1",
